updating content and including a readme

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta property="og:title" content="Coderturtle" />
     <meta property="og:image" content="/og-card.png" />
     <meta property="og:description" content="Slow is smooth. Smooth is fast. This is Coderturtle." />
-  </head>
+  
+<!-- Plausible Analytics -->
+<script async defer data-domain="coderturtle.io" src="https://plausible.io/js/script.js"></script>
+
+</head>
   <body style="background:#1c1c1e;color:#f4f4f5;font-family:Inter,sans-serif;padding:2rem;">
     <h1>Welcome to Coderturtle</h1>
     <p><a href="./dashboard">🧭 Developer Dashboard</a></p>
